# Grain

./: CMakeLists.txt  grain_input.csv  output.csv
header/: instance.h  milp.h  model.h  params.h  runner.h  solution.h
source/: instance.cpp  main.cpp  solution.cpp
